@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2002/08/25 18:38:31 jlam Exp $
+$NetBSD: distinfo,v 1.4 2002/12/31 19:06:57 jlam Exp $
 
-SHA1 (mm-1.2.1.tar.gz) = c2915c82adbf9be7b43375a5ced3dc08700b1810
-Size (mm-1.2.1.tar.gz) = 217078 bytes
+SHA1 (mm-1.2.2.tar.gz) = f98392eb91b4e2a2a017abead80cbfceea825175
+Size (mm-1.2.2.tar.gz) = 225559 bytes
